fix: play button z-index

--- a/app/scss/layout/_playbutton.scss
+++ b/app/scss/layout/_playbutton.scss
@@ -1,4 +1,13 @@
 #play {
-    width: 2em;
     height: 2em;
+    z-index: 25;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+}
+#scheissdreck{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
